feature(change-password):implement change password functionality
[Delivers #167942048]
